--- a/series/src/locales/en.json
+++ b/series/src/locales/en.json
@@ -4,5 +4,6 @@
     "Seasons":"Seasons",
     "Episodes":"Episodes",
     "Release Date":"Release Date",
-    "Loading":"Loading"
+    "Loading":"Loading",
+    "Error Loading Image":"Error Loading Image"
 }
