--- a/series/src/locales/es.json
+++ b/series/src/locales/es.json
@@ -4,5 +4,6 @@
     "Seasons":"Temporadas",
     "Episodes":"Episodios",
     "Release Date":"Fecha de lanzamiento",
-    "Loading":"Cargando"
+    "Loading":"Cargando",
+    "Error Loading Image":"Error Cargando la Imagen"
 }
